--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 				</div>			   
 			</div>
 			<div class="footer">
+				<div class="footer__feedback"><a href="mailto:feedback@stars-of-david.com" class="footer__feedback__link">{{model.footerFeedback}}</a></div>
 				<div class="footer__text">{{model.footerText}}</div>
-			</div> 
+			</div>
 		</div>
 	</body>
 </html>
