--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</div>			   
 			</div>
 			<div class="footer">
-				<div class="footer__feedback"><a href="mailto:feedback@stars-of-david.com" class="footer__feedback__link">{{model.footerFeedback}}</a></div>
+				<div class="footer__contact"><a href="mailto:contact@stars-of-david.com" class="footer__contact__link">contact@stars-of-david.com</a></div>
 				<div class="footer__text">{{model.footerText}}</div>
 			</div>
 		</div>
