--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 	</head>
 	<body ng-controller="mainCtrl">
 		<div id="intro-panel" class="intro">
-			<div class="intro__text">
-				<span ng-repeat="letter in model.introTextLetters" id="intro-letter-{{letter.index}}" class="intro__letter">{{letter.text}}</span>
-			</div>
-			<div class="intro__stars">
-				<img src="img/star-of-david.png" id="intro-star-0" class="intro__star"/>
-				<img src="img/star-of-david.png" id="intro-star-1" class="intro__star"/>
-				<img src="img/star-of-david.png" id="intro-star-2" class="intro__star"/>
+			<div class="intro__content">
+				<div class="intro__text">
+					<span ng-repeat="letter in model.introTextLetters" id="intro-letter-{{letter.index}}" class="intro__letter">{{letter.text}}</span>
+				</div>
+				<div class="intro__stars">
+					<img src="img/star-of-david.png" id="intro-star-0" class="intro__star"/>
+					<img src="img/star-of-david.png" id="intro-star-1" class="intro__star"/>
+					<img src="img/star-of-david.png" id="intro-star-2" class="intro__star"/>
+				</div>
 			</div>
 		</div>
 		<div id="main-panel" class="main">
