--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 				</div>			   
 			</div>
 			<div class="footer">
-				<div class="footer__contact"><a href="mailto:contact@stars-of-david.com" class="footer__contact__link">contact@stars-of-david.com</a></div>
-				<div class="footer__text">{{model.footerText}}</div>
+				<span>{{model.footerByText}}</span> | <a href="mailto:contact@stars-of-david.com">{{model.footerContactText}}</a>
 			</div>
 		</div>
 	</body>
