--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
 		<meta name="description" content="Jewish actors, actresses, artists, celebrities, comedians, directors, inventors, models, musicians, philosophers, politicians, producers, scientists, singers, writers, and more."/>
 		<meta  name="keywords" content="actors, actresses, artists, awesome, celebrities, comedians, david, directors, famous, inventors, jew, jewish, jews, models, musicians, people, philosophers, politicians, producers, scientists, singers, stars, writers"/>
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>		
+		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  			ga('create', 'UA-87912979-1', 'auto');
+  			ga('send', 'pageview');
+  		</script>
+
 		<script src="lib/angular.min.js"></script>
 		<script src="js/main-app.js"></script>
 		<script src="js/people.js"></script>
