remove contact info

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				</div>			   
 			</div>
 			<div class="footer">
-				<span>{{model.footerByText}}</span> | <a href="mailto:contact@stars-of-david.com">{{model.footerContactText}}</a>
+				<span>{{model.footerByText}}</span>
 			</div>
 		</div>
 	</body>
