--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <html ng-app="mainApp">
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-QFQZ5VFL8F"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-QFQZ5VFL8F');
+		</script>
 		<title>Stars of David - Awesome Jewish People</title>
 		<meta charset="UTF-8"/>
 		<meta name="description" content="Jewish actors, actresses, artists, celebrities, comedians, directors, inventors, models, musicians, philosophers, politicians, producers, scientists, singers, writers, and more."/>
 		<meta  name="keywords" content="actors, actresses, artists, awesome, celebrities, comedians, david, directors, famous, inventors, jew, jewish, jews, models, musicians, people, philosophers, politicians, producers, scientists, singers, stars, writers"/>
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
-
-		<script>
-  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  			ga('create', 'UA-87912979-1', 'auto');
-  			ga('send', 'pageview');
-  		</script>
-
 		<script src="lib/angular.min.js"></script>
 		<script src="js/main-app.js"></script>
 		<script src="js/people.js"></script>
@@ -64,9 +63,9 @@
 				    	<div class="person__name">{{item.name}}</div>
 				    	<img ng-if="item.score >= 1" src="img/star-of-david.png" class="person__star person__star-1"/>
 				    	<img ng-if="item.score >= 2" src="img/star-of-david.png" class="person__star person__star-2"/>
-				    	<img ng-if="item.score >= 3" src="img/star-of-david.png" class="person__star person__star-3"/>			    			    
+				    	<img ng-if="item.score >= 3" src="img/star-of-david.png" class="person__star person__star-3"/>
 					</a>
-				</div>			   
+				</div>
 			</div>
 			<div class="footer">
 				<span>{{model.footerByText}}</span>
